--- a/resume/index.html
+++ b/resume/index.html
@@ -59,6 +59,115 @@
     <h2 class="subtitle">Resume</h2>
   </header>
   <main>
+
+    <section id="work">
+      <article>
+        <h2>Work Experience</h2>
+        <h4>
+           <img src="../images/aker logo.jpg" alt="Aker Solutions Logo" title="Aker Solutions"
+          class="logo"/>
+          <span class="bold">Aker Solutions</span>
+          -- Mobile, USA
+        </h4>
+        <p>
+          <span class="bold">Role:</span>
+          Software Engineer I -- October 2018 to Present
+        </p>
+        <ul class="italic smallText">
+          <li>
+            Developed a Cryptocurrency Trading Software using Artificial Intelligence to predict future prices of cryptocurrency coins using different exchanges.  
+            Also, designed a cryptocurrency mining rig to generate crypto coins using Nvidia Graphic card.
+          </li>
+          <li>
+            Gained valuable experience working in a startup environment with time constraints and learning new technologies. 
+          </li>
+        </ul>
+        <h4>
+        <h4>
+          <!-- <img src="../images/merlin logo.jpg" alt="Merlin Solar Technologies Logo" title="Merlin Solar Technologies"
+          class="logo"/> -->
+          <span class="bold">Vision13 Technologies</span>
+          -- Remote, USA
+        </h4>
+        <p>
+          <span class="bold">Role:</span>
+          Program Intern -- March 2018 to July 2018
+        </p>
+        <ul class="italic smallText">
+          <li>
+            Developed a Cryptocurrency Trading Software using Artificial Intelligence to predict future prices of cryptocurrency coins using different exchanges.  
+            Also, designed a cryptocurrency mining rig to generate crypto coins using Nvidia Graphic card.
+          </li>
+          <li>
+            Gained valuable experience working in a startup environment with time constraints and learning new technologies. 
+          </li>
+        </ul>
+        <h4>
+        <h4>
+          <img src="../images/merlin logo.jpg" alt="Merlin Solar Technologies Logo" title="Merlin Solar Technologies"
+          class="logo"/>
+          <span class="bold">Merlin Solar Technologies</span>
+          -- San Jose, CA, USA
+        </h4>
+        <p>
+          <span class="bold">Role:</span>
+          Engineering Intern -- Summer 2017
+        </p>
+        <ul class="italic smallText">
+          <li>
+            Developed an IoT based system for collecting data from Solar Panels installed on trucks and sending the information to an IoT based platform for continous monitoring. 
+            Also, worked in a group of 4 for designing a LabView Project on a small scale to plot real time data from DC Load.
+          </li>
+          <li>
+            Gained valuable experience working on a large-scale cost-effective project in a corporate environment
+          </li>
+        </ul>
+        <h4>
+        <h4>
+          <img src="../images/emerson.jpg" alt="Emerson Network Power Logo" title="Emerson Network Power"
+          class="logo"/>
+          <span class="bold">Vertiv (Emerson Network Power)</span>
+          -- Mumbai, Maharashtra, India
+        </h4>
+        <p>
+          <span class="bold">Role:</span>
+          Engineering Intern -- June 2015 to July 2017
+        </p>
+        <ul class="italic smallText">
+          <li>
+           Studied various components used in UPS, DC and AC Power systems. For the same systems, carried out different test for checking the reliability of the system
+          </li>
+          <li>
+            Gained experience working in a manufacturing environment
+          </li>
+        </ul>
+        <h4>
+        <h4>
+          <img src="../images/omicron.png" alt="Omicron Sensing Logo" title="Omicron Sensing Pvt. Ltd. "
+          class="logo"/>
+          <span class="bold">Omicron Sensing Pvt. Ltd. </span>
+          -- Mumbai, Maharashtra, India
+        </h4>
+        <p>
+          <span class="bold">Role:</span>
+          Trainee Engineer -- November 2014 to May 2015
+        </p>
+        <ul class="italic smallText">
+          <li>
+            Managed a team of 8 people and developed low cost communication modules and marketed the same for the company. 
+            Also, manufactured and tested PCB layout for communicaiton modules for different products.
+          </li>
+          <li>
+            Gained valuable experience working as a leader in a fast paced environment and learned the tools used in testing equipment
+          </li>
+        </ul>
+      </article>
+      <figure>
+        <img src="../images/formal.jpg" alt="" title=""/>
+        <figcaption></figcaption>
+      </figure>
+    </section>
+
     <section id="education">
       <article>
         <h2>Education</h2>
@@ -191,87 +300,6 @@
         <img src="../images/grad.jpg" alt="Graduation 2017" title="Graduation 2017"/>
         <figcaption>Graduation 2017</figcaption>
       </figure>
-    </section>
-    <section id="work">
-      <article>
-        <h2>Work Experience</h2>
-        <h4>
-          <!-- <img src="../images/merlin logo.jpg" alt="Merlin Solar Technologies Logo" title="Merlin Solar Technologies"
-          class="logo"/> -->
-          <span class="bold">Vision13 Technologies</span>
-          -- Remote, USA
-        </h4>
-        <p>
-          <span class="bold">Role:</span>
-          Program Intern -- March 2018 to July 2018
-        </p>
-        <ul class="italic smallText">
-          <li>
-            Developed a Cryptocurrency Trading Software using Artificial Intelligence to predict future prices of cryptocurrency coins using different exchanges.  
-            Also, designed a cryptocurrency mining rig to generate crypto coins using Nvidia Graphic card.
-          </li>
-          <li>
-            Gained valuable experience working in a startup environment with time constraints and learning new technologies. 
-          </li>
-        </ul>
-        <h4>
-        <h4>
-          <img src="../images/merlin logo.jpg" alt="Merlin Solar Technologies Logo" title="Merlin Solar Technologies"
-          class="logo"/>
-          <span class="bold">Merlin Solar Technologies</span>
-          -- San Jose, CA, USA
-        </h4>
-        <p>
-          <span class="bold">Role:</span>
-          Engineering Intern -- Summer 2017
-        </p>
-        <ul class="italic smallText">
-          <li>
-            Developed an IoT based system for collecting data from Solar Panels installed on trucks and sending the information to an IoT based platform for continous monitoring. 
-            Also, worked in a group of 4 for designing a LabView Project on a small scale to plot real time data from DC Load.
-          </li>
-          <li>
-            Gained valuable experience working on a large-scale cost-effective project in a corporate environment
-          </li>
-        </ul>
-        <h4>
-          <img src="../images/emerson.jpg" alt="Emerson Network Power Logo" title="Emerson Network Power"
-          class="logo"/>
-          <span class="bold">Vertiv (Emerson Network Power)</span>
-          -- Mumbai, Maharashtra, India
-        </h4>
-        <p>
-          <span class="bold">Role:</span>
-          Engineering Intern -- June 2015 to July 2017
-        </p>
-        <ul class="italic smallText">
-          <li>
-           Studied various components used in UPS, DC and AC Power systems. For the same systems, carried out different test for checking the reliability of the system
-          </li>
-          <li>
-            Gained experience working in a manufacturing environment
-          </li>
-        </ul>
-        <h4>
-          <img src="../images/omicron.png" alt="Omicron Sensing Logo" title="Omicron Sensing Pvt. Ltd. "
-          class="logo"/>
-          <span class="bold">Omicron Sensing Pvt. Ltd. </span>
-          -- Mumbai, Maharashtra, India
-        </h4>
-        <p>
-          <span class="bold">Role:</span>
-          Trainee Engineer -- November 2014 to May 2015
-        </p>
-        <ul class="italic smallText">
-          <li>
-            Managed a team of 8 people and developed low cost communication modules and marketed the same for the company. 
-            Also, manufactured and tested PCB layout for communicaiton modules for different products.
-          </li>
-          <li>
-            Gained valuable experience working as a leader in a fast paced environment and learned the tools used in testing equipment
-          </li>
-        </ul>
-      </article>
     </section>
 
     <section id="certifications">
@@ -470,6 +498,7 @@
           <li>
             <span class="bold">Programming Languages:</span>
             <ul class="italic">
+              <li>VTS</li>
               <li>C, C++, C#, Java</li>
               <li>Python, R</li>
               <li>HTML, CSS, JavaScript</li>
@@ -480,6 +509,9 @@
           <li>
             <span class="bold">Programs:</span>
             <ul class="italic">
+              <li>SMACS6</li>
+              <li>SMACS5</li>
+              <li>WEB4</li>
               <li>Eagle PCB</li>
               <li>Onshape CAD</li>
               <li>MATLAB</li>
@@ -502,6 +534,40 @@
     </section>
     <section id="projects">
       <h2>Projects</h2>
+      <section id="troika">
+      <article>
+        <h3>
+          <span class="bold">FieldWood Troika Field Project</span>
+          -- Aker Solutions
+        </h3>
+        <p>
+          <span class="bold">Goal:</span>
+          Addition of Subsea Wells to existing system and performing a core upgrade of the system.
+        </p>
+        <p>
+          <span class="bold">Overview:</span>
+          The main challenge during the project was performing a core upgrade to make Droshky Master Control System compatible with new generation Subsea Control Module for the addition of new wells.
+        </p>
+        <p>
+          <span class="bold">Design:</span>
+          The Droshky Master Control Sytem talks with Subsea Control Module using Aker Solutions propiertary communication protocol. The following softwares were used in design and implementation:
+          <ul class="smallText">
+            <li>
+              <span class="bold">Master Control System :</span>
+              <ul class="italic">
+                <li>SMACS6</li>
+                <li>VTS</li>
+                <li>WEB4 </li>
+              </ul>
+            </li>
+          </ul>
+        </p>
+        <p>
+          For a more detailed overview of this project, visit the
+          <a href="../portfolio/index.html#troika">Projects Page</a>
+        </p>
+      </article>
+    </section>
       <section id="cryptocurrency">
       <article>
         <h3>
