--- a/contact/index.html
+++ b/contact/index.html
@@ -47,7 +47,9 @@
         <p>
           <span class="bold">Phone:</span>
           +1 (251) 229-5509
-          +1 (224) 307-6402
+        </p>
+        <p>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+1 (224) 307-6402
         </p>
         <p>
           <span class="bold">Email:</span>
@@ -74,9 +76,9 @@
         </section>
       </article>
       <figure>
-        <img src="../images/grad.jpg" alt="Graduation 2017" title="Graduation 2017"/>
-        <figcaption>Graduation 2017</figcaption>
-      </figure>
+        <img src="../images/formal.jpg" alt="" title=""/>
+        <figcaption></figcaption>
+      </figure>      
     </section>
     <section class="whitespace">
     </section>
