--- a/resume/index.html
+++ b/resume/index.html
@@ -534,7 +534,46 @@
     </section>
     <section id="projects">
       <h2>Projects</h2>
-      <section id="troika">
+      <section id="kodiak">
+      <article>
+        <h3>
+          <span class="bold">Kosmos Kodiak Field Project</span>
+          -- Aker Solutions
+        </h3>
+        <p>
+          <span class="bold">Goal:</span>
+          Addition of Subsea Wells to existing system and addition of Subsea Metering Interface to system.
+        </p>
+        <p>
+          <span class="bold">Overview:</span>
+          The main challenge in the project is the interface of subsea metering module to the exisitng Kodiak Master Control System.
+        </p>
+        <p>
+          <span class="bold">Design:</span>
+          The Kodiak Master Control Sytem talks with Subsea Control Module using Aker Solutions propiertary ASE5K communication protocol. The following softwares were are being in design and implementation:
+          <ul class="smallText">
+            <li>
+              <span class="bold">Master Control System :</span>
+              <ul class="italic">
+                <li>SMACS6</li>
+                <li>VTS</li>
+                <li>ETU</li>
+              </ul>
+            </li>
+          </ul>
+        </p>
+        <p>
+          For a more detailed overview of this project, visit the
+          <a href="../portfolio/index.html#kodiak">Projects Page</a>
+        </p>
+      </article>
+      <figure>
+        <img src="../images/kodiak.jpg"
+          alt="Kodiak System Overview" title="Kodiak System Overview"/>
+        <figcaption>Kodiak System Overview</figcaption>
+      </figure>
+    </section>
+    <section id="troika">
       <article>
         <h3>
           <span class="bold">FieldWood Troika Field Project</span>
@@ -550,7 +589,7 @@
         </p>
         <p>
           <span class="bold">Design:</span>
-          The Droshky Master Control Sytem talks with Subsea Control Module using Aker Solutions propiertary communication protocol. The following softwares were used in design and implementation:
+          The Droshky Master Control Sytem talks with Subsea Control Module using Aker Solutions propiertary ASE4K communication protocol. The following softwares were used in design and implementation:
           <ul class="smallText">
             <li>
               <span class="bold">Master Control System :</span>
@@ -567,8 +606,13 @@
           <a href="../portfolio/index.html#troika">Projects Page</a>
         </p>
       </article>
+      <figure>
+        <img src="../images/troika.jpg"
+          alt="Droshky System Overview" title="Droshky System Overview"/>
+        <figcaption>Droshky System Overview</figcaption>
+      </figure>
     </section>
-      <section id="cryptocurrency">
+    <section id="cryptocurrency">
       <article>
         <h3>
           <span class="bold">Crytocurrency Trading Bot</span>
