--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -26,6 +26,12 @@
         <a href="index.html"><i class="flaticon-folder"></i> Project Portfolio </a>
         <ul class="dropcontent">
           <li>
+            <a href="#2020" onclick="openNav()"> 2020 </a>
+          </li>
+          <li>
+            <a href="#2019" onclick="openNav()"> 2019 </a>
+          </li>
+          <li>
             <a href="#2018" onclick="openNav()"> 2018 </a>
           </li>
           <li>
@@ -59,6 +65,70 @@
     <h2 class="subtitle">Projects</h2>
   </header>
   <main>
+    <section id="2020">
+      <h2>2020</h2>
+        <section id="kodiak">
+        <article>
+          <h3>
+            <span class="bold">Kosmos Kodiak Field Project</span> -- Control Systems
+          </h3>
+          <p>
+            Cryptocurrency Trading Bot was created by Karan Shah and a team of 3 people during my experience at Vision13 Technologies from March 2018 to July 2018.
+          </p>
+          <p>
+            The goal of this project was to create an algorithm to predict cryptocurrency prices using Artificial Intelligence.
+            The key feature of the product use of AI which makes the use of this product easier and less dependent on user.
+          </p>
+          <p>
+            Due to intellectual property, I can't divulge more into the working of the product.
+          </p>
+          <p>
+            We used Alpha GO Zero as a benchmark to design the algorithm.
+          </p>
+          <p>
+            We used the following technologies to implement our design:
+            <ul>
+              <li>
+                Algorithm
+                <ul class="italic smallText">
+                  <li>
+                    NodeJS JavaScript
+                  </li>
+                  <li>
+                    Python
+                  </li>
+                  <li>
+                    External Libraries
+                  </li>
+                </ul>
+              </li>
+              <li>
+                Web Scrapper
+                <ul class="italic smallText">
+                  <li>
+                    Python
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </p>
+          <p>
+            For a more detailed overview of this project check out the documents linked below.
+          </p>
+          <a href="../pdf/cryptocurrency_final.pdf" target="_blank">Report</a>
+          <br />
+          <br />
+          <a href="https://github.com/kks3851/IoTDataLogger" target="_blank">
+            View source code on GitHub
+          </a>
+        </article>
+        <!--<figure>
+          <img src="../images/datalogger.jpg" alt="Data Logger in action"
+            title="Data Logger"/>
+            <figcaption>IoT based Data Logger</figcaption>
+        </figure>-->
+      </section>
+    </section>
     <section id="2018">
       <h2>2018</h2>
         <section id="cryptocurrency">
@@ -111,16 +181,16 @@
           </p>
           <a href="../pdf/cryptocurrency_final.pdf" target="_blank">Report</a>
           <br />
-          <br />
-          <a href="https://github.com/kks3851/IoTDataLogger" target="_blank">
+          <br />2
+          <!--<a href="https://github.com/kks3851/IoTDataLogger" target="_blank">
             View source code on GitHub
-          </a>
+          </a>-->
         </article>
-        <figure>
+        <!--<figure>
           <img src="../images/datalogger.jpg" alt="Data Logger in action"
             title="Data Logger"/>
             <figcaption>IoT based Data Logger</figcaption>
-        </figure>
+        </figure>-->
       </section>
     </section>
     <section id="2017">
