--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -73,54 +73,50 @@
             <span class="bold">Kosmos Kodiak Field Project</span> -- Control Systems
           </h3>
           <p>
-            Cryptocurrency Trading Bot was created by Karan Shah and a team of 3 people during my experience at Vision13 Technologies from March 2018 to July 2018.
+            Kosmos Kodiak Well addition and Subsea Metering is currently being designed by me at Aker Solutions.
           </p>
           <p>
-            The goal of this project was to create an algorithm to predict cryptocurrency prices using Artificial Intelligence.
-            The key feature of the product use of AI which makes the use of this product easier and less dependent on user.
+            The goal of this project is to add new subsea well to the Kodiak Master Control System, perform a hardware upgrade and design the system to support new Subsea Metering Module Interface.
           </p>
           <p>
-            Due to intellectual property, I can't divulge more into the working of the product.
+            Due to intellectual property, I can't divulge more information regarding the working.
           </p>
           <p>
-            We used Alpha GO Zero as a benchmark to design the algorithm.
-          </p>
-          <p>
-            We used the following technologies to implement our design:
+            We are using the following technologies to acheive the goal:
             <ul>
               <li>
-                Algorithm
+                Master Control System
                 <ul class="italic smallText">
                   <li>
-                    NodeJS JavaScript
+                    SMACS6
                   </li>
                   <li>
-                    Python
+                    VTS
                   </li>
                   <li>
-                    External Libraries
+                    ETU
                   </li>
                 </ul>
               </li>
               <li>
-                Web Scrapper
+                Subsea Communication Module
                 <ul class="italic smallText">
                   <li>
-                    Python
+                    ASE5K Protocol
                   </li>
                 </ul>
               </li>
             </ul>
           </p>
           <p>
-            For a more detailed overview of this project check out the documents linked below.
+            Due to properiatry reasons, no report is available.
           </p>
-          <a href="../pdf/cryptocurrency_final.pdf" target="_blank">Report</a>
+          <!--<a href="" target="_blank">Report</a>-->
           <br />
           <br />
-          <a href="https://github.com/kks3851/IoTDataLogger" target="_blank">
+          <!--<a href="https://github.com/kks3851/IoTDataLogger" target="_blank">
             View source code on GitHub
-          </a>
+          </a>-->
         </article>
         <!--<figure>
           <img src="../images/datalogger.jpg" alt="Data Logger in action"
