updated html file

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -108,8 +108,170 @@
               </li>
             </ul>
           </p>
+          <!--<a href="" target="_blank">Report</a>-->
+          <br />
+          <br />
+          <!--<a href="https://github.com/kks3851/IoTDataLogger" target="_blank">
+            View source code on GitHub
+          </a>-->
+        </article>
+        <!--<figure>
+          <img src="../images/datalogger.jpg" alt="Data Logger in action"
+            title="Data Logger"/>
+            <figcaption>IoT based Data Logger</figcaption>
+        </figure>-->
+      </section>
+    </section>
+    <section id="2019">
+      <h2>2019</h2>
+        <section id="troika">
+        <article>
+          <h3>
+            <span class="bold">FieldWood Troika Field Project</span> -- Control Systems
+          </h3>
           <p>
-            Due to properiatry reasons, no report is available.
+            FieldWood Troika Field Project was implemented by Karan Shah in a team of 2 engineeers at Aker Solutions from June 2019 to January 2020.
+          </p>
+          <p>
+            The goal of the project was to add two new subsea well to the Droshky Master Control System and perform a core software upgrade.
+          </p>
+          <p>
+            Due to intellectual property and client configentiality, I can't divulge more information regarding the project.
+          </p>
+          <p>
+            We used the following technologies to acheive the goal:
+            <ul>
+              <li>
+                Master Control System
+                <ul class="italic smallText">
+                  <li>
+                    SMACS6
+                  </li>
+                  <li>
+                    VTS
+                  </li>
+                  <li>
+                    WEB4
+                  </li>
+                </ul>
+              </li>
+              <li>
+                Subsea Communication Module
+                <ul class="italic smallText">
+                  <li>
+                    ASE4K Protocol
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </p>
+          <!--<a href="" target="_blank">Report</a>-->
+          <br />
+          <br />
+          <!--<a href="https://github.com/kks3851/IoTDataLogger" target="_blank">
+            View source code on GitHub
+          </a>-->
+        </article>
+        <!--<figure>
+          <img src="../images/datalogger.jpg" alt="Data Logger in action"
+            title="Data Logger"/>
+            <figcaption>IoT based Data Logger</figcaption>
+        </figure>-->
+      </section>
+      <section id="ssld">
+        <article>
+          <h3>
+            <span class="bold">Subsea Leak Detection</span> -- Control Systems
+          </h3>
+          <p>
+            FieldWood Troika Field Project was implemented by Karan Shah in a team of 2 engineeers at Aker Solutions from June 2019 to January 2020.
+          </p>
+          <p>
+            The goal of the project was to add two new subsea well to the Droshky Master Control System and perform a core software upgrade.
+          </p>
+          <p>
+            Due to intellectual property and client configentiality, I can't divulge more information regarding the project.
+          </p>
+          <p>
+            We used the following technologies to acheive the goal:
+            <ul>
+              <li>
+                Master Control System
+                <ul class="italic smallText">
+                  <li>
+                    SMACS6
+                  </li>
+                  <li>
+                    VTS
+                  </li>
+                  <li>
+                    WEB4
+                  </li>
+                </ul>
+              </li>
+              <li>
+                Subsea Communication Module
+                <ul class="italic smallText">
+                  <li>
+                    ASE4K Protocol
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </p>
+          <!--<a href="" target="_blank">Report</a>-->
+          <br />
+          <br />
+          <!--<a href="https://github.com/kks3851/IoTDataLogger" target="_blank">
+            View source code on GitHub
+          </a>-->
+        </article>
+        <!--<figure>
+          <img src="../images/datalogger.jpg" alt="Data Logger in action"
+            title="Data Logger"/>
+            <figcaption>IoT based Data Logger</figcaption>
+        </figure>-->
+      </section>
+      <section id="skoflo">
+        <article>
+          <h3>
+            <span class="bold">Constellation Skoflo Configurations</span> -- Control Systems
+          </h3>
+          <p>
+            FieldWood Troika Field Project was implemented by Karan Shah in a team of 2 engineeers at Aker Solutions from June 2019 to January 2020.
+          </p>
+          <p>
+            The goal of the project was to add two new subsea well to the Droshky Master Control System and perform a core software upgrade.
+          </p>
+          <p>
+            Due to intellectual property and client configentiality, I can't divulge more information regarding the project.
+          </p>
+          <p>
+            We used the following technologies to acheive the goal:
+            <ul>
+              <li>
+                Master Control System
+                <ul class="italic smallText">
+                  <li>
+                    SMACS6
+                  </li>
+                  <li>
+                    VTS
+                  </li>
+                  <li>
+                    WEB4
+                  </li>
+                </ul>
+              </li>
+              <li>
+                Subsea Communication Module
+                <ul class="italic smallText">
+                  <li>
+                    ASE4K Protocol
+                  </li>
+                </ul>
+              </li>
+            </ul>
           </p>
           <!--<a href="" target="_blank">Report</a>-->
           <br />
@@ -177,7 +339,7 @@
           </p>
           <a href="../pdf/cryptocurrency_final.pdf" target="_blank">Report</a>
           <br />
-          <br />2
+          <br />
           <!--<a href="https://github.com/kks3851/IoTDataLogger" target="_blank">
             View source code on GitHub
           </a>-->
